<resources>

    <string name="app_name">Android eBook Template </string>
    <string name="title_activity">Android eBook Template! </string>
    <string name="dialog_exit_title">Quit \"Android eBook Template \" ?</string>
    <string name="menu_bookmark">Bookmark/Un-bookmark</string>
    <string name="menu_bookmarked_chap">Reading chapters</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_background">Background</string>
    <string name="menu_about">About</string>
    <string name="menu_bg_white">White</string>
    <string name="menu_bg_khaki">Khaki</string>
    <string name="menu_bg_sepia">Sepia</string>
    <string name="menu_bg_black">Black</string>
    <string name="btn_zoom_in">+</string>
    <string name="btn_zoom_out">-</string>
    <string name="btn_delete">Delete</string>
    <string name="dialog_bm_title">Bookmark</string>
    <string name="dialog_bm_msg">Do you want to bookmark the current chapter?</string>
    <string name="dialog_un_bm_title">Un-Bookmark</string>
    <string name="dialog_un_bm_msg">Do you want to un-bookmark the current chapter?</string>
    <string name="dialog_bm_pos">OK</string>
    <string name="dialog_bm_neg">Cancel</string>
    <string name="str_part">Part</string>
    <string name="str_chap">Chapter</string>
    <string name="title_sliding_left">Contents</string>
    <string name="title_sliding_right">Bookmark List</string>
    <string name="bm_list_empty">You don\'t have any bookmark!</string>

    <!-- Clings -->
    <string name="cling_title">Guideline</string>
    <string name="cling_description">- Swipe left or right to change chapters.\n- Pinch in/out to zoom in/out chapter\'s content.</string>
    <string name="cling_content">Click here to show chapter list.</string>
    <string name="cling_dismiss">OK</string>
    <!-- Error message on dummy custom cling layout [DO NOT TRANSLATE] -->
    <string name="dummy_custom_cling_error_message">Error: custom workspace layout passed in but custom cling was not overwritten</string>
    <string name="msg_alert_1">This chap is bookmarked!</string>
    <string name="msg_alert_2">You\'re reading this chap!</string>
    <string name="dialog_exit_msg">Do you want to save your reading chapter for the next time this app starts?</string>
    <string name="dialog_exit_positive">Quit</string>
    <string name="dialog_exit_neutral">Save And Quit</string>
    <string name="dialog_exit_negative">Return</string>
    <string name="contact_prefix">About application:</string>
    <string name="contact_chooser">Choose an Email client:</string>
    <string name="dialog_no_connection_title">No Internet Connection</string>
    <string name="dialog_no_connection_msg">Please check you network connection!</string>
    <string name="dialog_no_connection_try">Try Again</string>

</resources>