<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="never|collapseActionView|withText"
        android:title="@string/menu_about"/>
    
    <item
        android:id="@+id/menu_background"
        android:icon="@drawable/background"
        android:showAsAction="never|collapseActionView|withText"
        android:title="@string/menu_background">
        <menu>
            <item
                android:id="@+id/menu_bg_white"
                android:showAsAction="never|collapseActionView|withText"
                android:title="@string/menu_bg_white"/>
            <item
                android:id="@+id/menu_bg_khaki"
                android:showAsAction="never|collapseActionView|withText"
                android:title="@string/menu_bg_khaki"/>
            <item
                android:id="@+id/menu_bg_sepia"
                android:showAsAction="never|collapseActionView|withText"
                android:title="@string/menu_bg_sepia"/>
        </menu>
    </item>
    
    <item
        android:id="@+id/menu_bookmark"
        android:icon="@drawable/add_bookmark"
        android:showAsAction="never|collapseActionView|withText"
        android:title="@string/menu_bookmark"/>
    
    <item
        android:id="@+id/menu_bookmarked_chap"
        android:icon="@drawable/bookmark_folder"
        android:showAsAction="never|collapseActionView|withText"
        android:title="@string/menu_bookmarked_chap"/>
    

</menu>