<?xml version="1.0" encoding="utf-8"?>
<com.ittus.book_template.views.Cling 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res/com.ittus.book_template"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    launcher:drawIdentifier="main_activity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <TextView
            style="@style/ClingTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cling_title" />

        <TextView
            style="@style/ClingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cling_description" />
    </LinearLayout>

    <TextView
        style="@style/ClingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/cling_content" />

    <Button
        style="@style/ClingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:onClick="dismissMainCling" />

</com.ittus.book_template.views.Cling>